--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,36 @@ __pycache__/
 .Python
 *.so
 .pytest_cache/
+
+# Cleanup - prevent re-adding these file types
+*.livemd
+scripts/
+*_old.py
+*_simple.py
+test_db_connection.py
+test-pgconnection.py
+leaderboard_results.json
+requirements-asr-eval.txt
+run_in_venv.sh
+
+# Cleanup - prevent re-adding these file types
+*.livemd
+scripts/
+*_old.py
+*_simple.py
+test_db_connection.py
+test-pgconnection.py
+leaderboard_results.json
+requirements-asr-eval.txt
+run_in_venv.sh
+
+# Talisman
+.talismanrc
+.talismanignore
+
+# Local training logs (contains sensitive information)
+docs/.log_training.md.local
+docs/log_training.md
+**/log_training.md
+**/.log_training.md.local
+
