chore: add runpod module, containerized tests, pin runpodctl, rename demo notebook, update HISTORY

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ docs/log_training.md
 **/log_training.md
 **/.log_training.md.local
 
+
+# Notebook runpod template history (local only)
+notebooks/runpod_deployments/.templates_history.json
+
